# FL-Bioinformatics

./: .gitignore  FL_Bio.yaml  FL_Bioo.yaml  FL_bio.yaml  README.md
MinorAllele/: Comparison.ipynb  README.md  maf_out.csv  pyproject.toml
MinorAllele/app/: __init__.py  client_app.py  server_app.py  task.py  workflow_with_log.py
SecureSum/: README.md  output.csv  pyproject.toml
SecureSum/app/: __init__.py  aggregate.py  client_app.py  custom_strategy.py  server_app.py  strategy.py  task.py  workflow_with_log.py
WeaklyExpressed/: Comparison.ipynb  README.md  output.npy  pyproject.toml
WeaklyExpressed/app/: __init__.py  client_app.py  server_app.py  task.py  workflow_with_log.py
