[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MinorAllele"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "numpy>=1.21.0",
    "ray",
    "flwr_datasets"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dmalpetti"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.app.config]
# Number of vector components
num_individuals = 100
num_snps = 5
seed_value = 255

# Parameters for the SecAgg+ protocol
num-shares = 3
reconstruction-threshold = 2
clipping_range = 1.0
timeout = 15.0


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
