[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MinorAllele"
version = "1.0.0"
description = "A Flower for minor allele frequency"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dmalpetti"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.app.config]
# Simulation dataset parameters
num_individuals = 100  # Total number of individuals in the dataset
num_snps = 5  # Number of SNPs analyzed per individual
seed_value = 255  # Random seed for reproducibility

# Secure Aggregation (SecAggPlus) parameters
num-shares = 3  # Number of secret shares for secure aggregation
reconstruction-threshold = 2  # Minimum number of shares required for reconstruction
timeout = 15.0  # Timeout duration (seconds) for secure aggregation

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
