[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SecureSum"
version = "1.0.0"
description = "A Flower for custom secure sum strategy using SecAgg+"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.app.config]
# Number of vector components
N = 5

# Secure Aggregation (SecAgg+) parameters
num-shares = 3  # Number of secret shares for secure aggregation
reconstruction-threshold = 2  # Minimum number of shares required for reconstruction
timeout = 15.0  # Timeout duration (seconds) for secure aggregation

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
