[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WeaklyExpressed"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "numpy>=1.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dmalpetti"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.app.config]
# Gene expression parameters
expr_thr = 10  # Minimum expression level for a gene to be considered expressed
expr_perc = 70  # Percentage of individuals with expression < expr_thr to classify a gene as weakly expressed

# Simulation dataset parameters
num_individuals = 100  # Total number of individuals in the dataset
num_genes = 10  # Number of genes analyzed per individual
seed_value = 21  # Random seed for reproducibility

# Secure Aggregation (SecAgg+) parameters
num-shares = 3  # Number of secret shares for secure aggregation
reconstruction-threshold = 2  # Minimum number of shares required for reconstruction
timeout = 15.0  # Timeout duration (seconds) for secure aggregation

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5  # Number of clients in the simulation