[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WeaklyExpressed"
version = "1.0.0"
description = "A Flower for weakly expressed genes detection"
license = "Apache-2.0"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dmalpetti"

[tool.flwr.app.components]
serverapp = "app.server_app:app"
clientapp = "app.client_app:app"

[tool.flwr.app.config]
# Gene expression parameters
expr_thr = 10  # Minimum expression level for a gene to be considered expressed
expr_perc = 70  # Percentage of individuals with expression < expr_thr to classify a gene as weakly expressed

# Secure Aggregation (SecAggPlus) parameters
num-shares = 3  # Number of secret shares for secure aggregation
reconstruction-threshold = 2  # Minimum number of shares required for reconstruction
timeout = 15.0  # Timeout duration (seconds) for secure aggregation

# Simulation dataset parameters
num_individuals = 100  # Total number of individuals in the dataset
num_genes = 6  # Number of genes analyzed per individual
seed_value = 21  # Random seed for reproducibility

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5  # Number of clients in the simulation
